# swf-fastmon-agent

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
src/swf_fastmon_agent/: fastmon_utils.py  main.py
src/swf_fastmon_agent/tests/: test_fastmon_utils.py
src/swf_fastmon_client/: README.md  main.py
