[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swf-fastmon-agent"
version = "0.1.0"
description = "The SWF fast monitoring service"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "Django>=4.2,<5.0",
    "psycopg>=3.2.0",
    "psycopg2-binary>=2.9.0",
    "typer>=0.9.0",
    "stomp.py>=8.1.0",
    "requests>=2.31.0",
    "python-json-logger>=2.0.0",
    "swf-common-lib",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "django-stubs>=1.13.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.0.0",
]
[project.urls]
Repository = "https://github.com/BNLNPPS/swf-fastmon-agent/"
[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools.packages.find]
where = ["src"]
include = ["swf_fastmon_agent*", "swf_fastmon_client*"]
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "swf_monitor_project.settings"